Fix styles bugs on Safari

--- a/src/styles/base/_boilerplate.scss
+++ b/src/styles/base/_boilerplate.scss
@@ -4,24 +4,24 @@ body {
   color: $color-black;
   background-color: $color-white;
   font-family: $ff-body;
-  font-size: 16rem;
+  font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.25;
 }
 
 #app {
-  max-width: 1280rem;
-  width: calc(100% - (30rem * 2));
+  max-width: 128rem;
+  width: calc(100% - (3rem * 2));
   min-height: 100vh;
   height: 100%;
   margin-inline: auto;
-  padding-block: 48rem;
+  padding-block: 4.8rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 
   @media (max-width: 768px) {
-    padding-block: 32rem;
+    padding-block: 3.2rem;
   }
 }
 
