--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -11,7 +11,7 @@
 }
 
 html {
-  font-size: 6.25%;
+  font-size: 62.5%;
 }
 
 img {
