--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -7,6 +7,6 @@
   @media (max-width: 768px) {
     align-self: center;
     text-align: center;
-    font-size: 14rem;
+    font-size: 1.4rem;
   }
 }
