--- a/src/styles/layout/_form.scss
+++ b/src/styles/layout/_form.scss
@@ -1,7 +1,7 @@
 @use "/src/styles/abstracts/variables" as *;
 
 @mixin error-message {
-  font-size: 12rem;
+  font-size: 1.2rem;
   font-family: $ff-body;
   color: $color-red-tint;
 }
@@ -9,7 +9,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 24rem;
+  gap: 2.4rem;
 }
 
 .form[valid] {
@@ -25,19 +25,19 @@
 .form__fieldset[data-error]::after {
   content: attr(data-error);
   @include error-message;
-  margin-top: 16rem;
+  margin-top: 1.6rem;
 }
 
 .form__legend {
   font-family: $ff-heading;
-  margin-bottom: 24rem;
-  font-size: 14rem;
+  margin-bottom: 2.4rem;
+  font-size: 1.4rem;
 }
 
 .form__radio-group {
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
-  gap: 18rem;
+  gap: 1.8rem;
 
   @media (max-width: 448px) {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -47,7 +47,7 @@
 .form__checkbox-group {
   display: flex;
   flex-direction: column;
-  gap: 12rem;
+  gap: 1.2rem;
 }
 
 .form__label-checkbox:first-child {
@@ -67,8 +67,8 @@
 .form__label {
   display: flex;
   flex-direction: column;
-  gap: 16rem;
-  font-size: 14rem;
+  gap: 1.6rem;
+  font-size: 1.4rem;
   font-family: $ff-heading;
   cursor: pointer;
 }
@@ -76,7 +76,7 @@
 .form__required::after {
   content: " \002A";
   color: $color-red-tint;
-  font-size: 14rem;
+  font-size: 1.4rem;
 }
 
 .form__label[data-error]::after {
@@ -85,52 +85,52 @@
 }
 
 .form__label[data-error] .form__input {
-  outline: 2rem solid $color-red-tint;
+  outline: 0.2rem solid $color-red-tint;
 }
 
 .form__label-radio,
 .form__label-checkbox {
   display: flex;
   align-items: center;
-  gap: 12rem;
+  gap: 1.2rem;
   cursor: pointer;
-  font-size: 12rem;
+  font-size: 1.2rem;
   width: fit-content;
 }
 
 .form__input {
-  height: 48rem;
-  padding: 8rem 12rem;
-  border-radius: 8rem;
+  height: 4.8rem;
+  padding: 0.8rem 1.2rem;
+  border-radius: 0.8rem;
   border: 0;
-  font-size: 18rem;
+  font-size: 1.8rem;
   font-family: $ff-body;
 }
 
 .form__input:focus-visible {
-  outline: 2rem solid $color-blue;
+  outline: 0.2rem solid $color-blue;
 }
 
 .form__input-radio {
   appearance: none;
-  width: 16rem;
+  width: 1.6rem;
   aspect-ratio: 1 / 1;
   border-radius: 50%;
-  outline: 2rem solid $color-green;
+  outline: 0.2rem solid $color-green;
   cursor: pointer;
 }
 
 .form__input-radio:checked {
   background-color: $color-green;
-  border: 2rem solid $color-gray-dark;
+  border: 0.2rem solid $color-gray-dark;
 }
 
 .form__input-checkbox {
   appearance: none;
-  width: 20rem;
+  width: 2rem;
   aspect-ratio: 1 / 1;
   background-color: $color-gray-light;
-  border-radius: 4rem;
+  border-radius: 0.4rem;
   cursor: pointer;
 }
 
@@ -143,12 +143,12 @@
 }
 
 .form__submit {
-  font-size: 14rem;
+  font-size: 1.4rem;
   color: $color-white;
   background-color: $color-red;
   border: 0;
-  padding: 12rem 56rem;
-  border-radius: 8rem;
+  padding: 1.2rem 5.6rem;
+  border-radius: 0.8rem;
   width: fit-content;
   place-self: center;
   cursor: pointer;
