--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -22,11 +22,11 @@
 }
 
 .header__logo {
-  width: 240rem;
+  width: 24rem;
   height: auto;
 
   @media (max-width: 1024px) {
-    width: 140rem;
+    width: 14rem;
   }
 }
 
@@ -35,7 +35,7 @@
 
   @media (max-width: 768px) {
     display: block;
-    width: 32rem;
+    width: 3.2rem;
     aspect-ratio: 1 / 1;
     border: none;
     background: url("/src/assets/icon-menu-red.svg") no-repeat center;
@@ -53,7 +53,7 @@
 .header__nav {
   display: flex;
   align-items: center;
-  gap: 8rem;
+  gap: 0.8rem;
   animation: none;
 
   @media (max-width: 768px) {
@@ -66,12 +66,12 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 64rem;
+    top: 6.4rem;
     right: 0;
     width: 100%;
     background-color: $color-white;
-    padding: 24rem;
-    border-radius: 8rem;
+    padding: 2.4rem;
+    border-radius: 0.8rem;
     z-index: 20;
   }
 }
@@ -79,18 +79,18 @@
 .header__nav-link {
   text-decoration: none;
   color: $color-gray-dark;
-  padding: 8rem 12rem;
-  border-radius: 8rem;
+  padding: 0.8rem 1.2rem;
+  border-radius: 0.8rem;
   transition: color, background-color 200ms linear;
 
   @media (max-width: 1024px) {
-    font-size: 14rem;
+    font-size: 1.4rem;
   }
 
   @media (max-width: 768px) {
     width: 100%;
     text-align: center;
-    padding-block: 12rem;
+    padding-block: 1.2rem;
   }
 }
 
