--- a/src/styles/layout/_modal.scss
+++ b/src/styles/layout/_modal.scss
@@ -2,13 +2,13 @@
 
 .modal {
   all: revert;
-  max-width: 512rem;
+  max-width: 51.2rem;
   width: 100%;
   padding: 0;
   border: none;
   color: $color-white;
   background-color: $color-gray-dark;
-  border-radius: 8rem;
+  border-radius: 0.8rem;
 
   @media (max-width: 512px) {
     border-radius: 0;
@@ -40,14 +40,14 @@
 .modal__content {
   display: flex;
   flex-direction: column;
-  gap: 12rem;
-  padding: 24rem 38rem;
+  gap: 1.2rem;
+  padding: 2.4rem 3.8rem;
   min-height: 100%;
 }
 
 .modal__close-button {
   align-self: flex-end;
-  width: 32rem;
+  width: 3.2rem;
   aspect-ratio: 1 / 1;
   border: none;
   background: url("/src/assets/icon-close-white.svg") no-repeat center;
@@ -61,18 +61,18 @@
 .success-message[success] {
   display: flex;
   flex-direction: column;
-  gap: 48rem;
-  padding: 32rem;
+  gap: 4.8rem;
+  padding: 3.2rem;
   animation: fade-in 1s linear;
 }
 
 .success-message__title {
-  font-size: 36rem;
+  font-size: 3.6rem;
   font-family: $ff-heading;
 }
 
 .success-message__text {
-  font-size: 14rem;
+  font-size: 1.4rem;
   line-height: 1.5;
 }
 
@@ -86,12 +86,12 @@
 }
 
 .success-message__button {
-  font-size: 14rem;
+  font-size: 1.4rem;
   color: $color-white;
   background-color: $color-red;
   border: 0;
-  padding: 12rem 56rem;
-  border-radius: 8rem;
+  padding: 1.2rem 5.6rem;
+  border-radius: 0.8rem;
   width: 100%;
   place-self: center;
   cursor: pointer;
