--- a/src/styles/layout/_source.scss
+++ b/src/styles/layout/_source.scss
@@ -1,8 +1,8 @@
 .repo-link {
   position: fixed;
-  right: 16rem;
-  bottom: 16rem;
-  padding: 12rem;
+  right: 1.6rem;
+  bottom: 1.6rem;
+  padding: 1.2rem;
   background-color: #0f172a;
   border-radius: 50%;
   transition: 150ms ease-in-out;
@@ -11,12 +11,12 @@
 }
 
 .repo-link svg {
-  width: 24rem;
+  width: 2.4rem;
   aspect-ratio: 1 / 1;
   fill: #f1f5f9;
 }
 
 .repo-link:hover {
   background-color: #3b82f6;
-  transform: translateY(-5rem);
+  transform: translateY(-0.5rem);
 }
